# gaiaread

./: .gitignore  CMakeLists.txt  ColorPalette.f90  DataTypes.f90  Galactic.f90  LICENSE  Lsq.f90  PROJECTION.F90  Prog.f90  README.md  distvsN.eps  distvserr.eps  gaia_source.txt  gr.plt  healpix.f90  main.f90  makefile  ogorod.f90  vkr.bib  РєСѓСЂСЃРѕРІР°СЏ.synctex.gz(busy)  вкр.bib  вкр.tex  курсовая.tex  презентация.tex
graphs/: M100.eps  Omega100.eps  UVW100.eps
